# VivisectION

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
scripts/: launchVivisectION  vivisection_activate  vivisection_deactivate
vivisection/: __init__.py  analyze.py  demangle.py  emulation.py  emutils.py  errno.py  example_func_setup.py  loader.py  malware.py  recon.py
vivisection/scripts/: vivisection_activate.py  vivisection_deactivate.py
vivisection/visualize/: graph.py
vivisection/viv_plugin/: __init__.py  emuclient.py  plugin.py  share.py
